@@ -180,60 +180,15 @@
 	}
 }
 
--(void)set2DProjection
-{
-	CGSize	winSize = [[CCDirector sharedDirector] winSizeInPixels];
-
-	kmGLLoadIdentity();
-	glViewport(0, 0, winSize.width * CC_CONTENT_SCALE_FACTOR(), winSize.height * CC_CONTENT_SCALE_FACTOR() );
-	kmGLMatrixMode(KM_GL_PROJECTION);
-	kmGLLoadIdentity();
-
-	kmMat4 orthoMatrix;
-	kmMat4OrthographicProjection(&orthoMatrix, 0, winSize.width * CC_CONTENT_SCALE_FACTOR(), 0, winSize.height * CC_CONTENT_SCALE_FACTOR(), -1024, 1024);
-	kmGLMultMatrix( &orthoMatrix );
-
-	kmGLMatrixMode(KM_GL_MODELVIEW);
-
-	ccSetProjectionMatrixDirty();
-}
-
--(void)set3DProjection
-{
-	CCDirector *director = [CCDirector sharedDirector];
-
-	CGSize	winSize = [director winSizeInPixels];
-	CGSize	winSizePoints = [director winSize];
-
-	if( CC_CONTENT_SCALE_FACTOR() != 1 )
-		glViewport(-winSize.width/2, -winSize.height/2, winSize.width * CC_CONTENT_SCALE_FACTOR(), winSize.height * CC_CONTENT_SCALE_FACTOR() );
-	else
-		glViewport(0, 0, winSize.width, winSize.height );
-
-	kmGLMatrixMode(KM_GL_PROJECTION);
-	kmGLLoadIdentity();
-
-	kmMat4 matrixPerspective, matrixLookup;
-
-	kmMat4PerspectiveProjection( &matrixPerspective, 60, (GLfloat)winSizePoints.width/winSizePoints.height, 0.5f, 1500.0f );
-	kmGLMultMatrix( &matrixPerspective );
-
-	kmGLMatrixMode(KM_GL_MODELVIEW);
-	kmGLLoadIdentity();
-	kmVec3 eye, center, up;
-	kmVec3Fill( &eye, winSizePoints.width/2, winSizePoints.height/2, [director getZEye] );
-	kmVec3Fill( &center, winSizePoints.width/2, winSizePoints.height/2, 0 );
-	kmVec3Fill( &up,0,1,0);
-	kmMat4LookAt(&matrixLookup, &eye, &center, &up);
-
-	kmGLMultMatrix( &matrixLookup );
-
-	ccSetProjectionMatrixDirty();
-}
-
 -(void)beforeDraw
 {
-	[self set2DProjection];
+	// save projection
+	CCDirector *director = [CCDirector sharedDirector];
+	directorProjection_ = [director projection];
+	
+	// 2d projection
+	[director setProjection:kCCDirectorProjection2D];
+
 	[grabber_ beforeRender:texture_];
 }
 
@@ -242,7 +197,9 @@
 {
 	[grabber_ afterRender:texture_];
 
-	[self set3DProjection];
+	// restore projection
+	CCDirector *director = [CCDirector sharedDirector];
+	[director setProjection: directorProjection_];
 
 	if( target.camera.dirty ) {
 
